objects/ssot__ApplicationRecommendation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationRecommenderId__c</fullName>
        <label>Application Recommender</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Recommendation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818621461_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationRecommendation_Applicatio_rel</label>
        <referenceTo>ssot__ApplicationRecommender__dlm</referenceTo>
        <relationshipLabel>ApplicationRecommendation_Applicatio_rel</relationshipLabel>
        <relationshipName>rel_1719818621461_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>